syntax = "proto3";

package menu.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/defvova/go_projects/mini_food_delivery/menu/pkg/menu/v1;menuv1";

service MenuService {
  rpc GetAllMenus(GetAllMenusRequest) returns (GetAllMenusResponse) {}
}

message Menu {
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool active = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetAllMenusRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetAllMenusResponse {
  repeated Menu items = 1;
}
